# corssa

./: .gitignore  README.md  data-check.ipynb  pyproject.toml  requirements.txt  test-models.ipynb  train-models.ipynb
examples/: training_new_model.ipynb  use_existing_model.ipynb
src/corssa/: coarse_graining.py  datautils.py  evalutils.py  featurizer.py  model.py  parsers.py
